<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/corner_top_40"
    android:padding="20dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/liner_layout_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mail"
            app:layout_constraintBottom_toBottomOf="@+id/send_mail_text1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>

    <TextView
        android:id="@+id/send_mail_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_your_inbox"
        style="@style/primary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/liner_layout_image" />

    <TextView
        android:id="@+id/send_mail_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/we_have_sent_an_email_with_a_link_to_sign_in_to"
        style="@style/secondary_text"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/send_mail_text1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/open_mail_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/open_email_app"
        style="@style/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/send_mail_text2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resend_mail"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/send_email_again"
        style="@style/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/open_mail_client" />


</androidx.constraintlayout.widget.ConstraintLayout>