<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/sign_in_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_in_facebook"
        android:layout_centerVertical="true"
        android:layout_marginBottom="50dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/edit_text_style"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:src="@drawable/icon_google" />

        <TextView
            style="@style/button_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:paddingRight="10dp"
            android:text="@string/sign_in_with_google" />

    </LinearLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:id="@+id/sign_in_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_style"
        android:gravity="center"
        android:layout_marginTop="-10dp"
        android:layout_below="@+id/sign_in_twitter"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_google">

        <ImageView
            android:id="@+id/icon_facebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:src="@drawable/icon_facebook" />

        <TextView
            android:id="@+id/text_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_text_login"
            android:layout_marginLeft="5dp"
            android:paddingRight="10dp"
            android:text="@string/sign_in_with_facebook"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_in_twitter"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_style"

        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_google">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:src="@drawable/icon_twitter" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:paddingRight="10dp"
            style="@style/button_text_login"
            android:text="@string/sign_in_with_twitter"/>

    </LinearLayout>


</RelativeLayout>